full switchover